#src/scss/_lost.scss
.lost {
    height: 50vh;
    background-repeat: no-repeat;
    background-position: top center;
    background-size: cover;
    margin-top: -12px;
    padding-top: 25px;
    z-index: 7;
}
.lost-slider {
    z-index: 7;
    &__item {
        z-index: 7;
    }
    &__inner {
        height: 60vh;
        width: 100%;
        display: flex;
        align-items: center;
        box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
        @media screen and (max-width: 660px) {
            flex-direction: column;
            height: 80vh;
        }
    }
    &__pic {
        background-repeat: no-repeat;
        background-position: top center;
        background-size: cover;  
        position: relative;
        @media screen and (max-width: 660px) {
            background-position: center center;
        }
    }
    &__pic ,
    &__description{
        width: 50%;
        height: 100%;
        z-index: 7;
        @media screen and (max-width: 660px) {
            width: 100%;
            height: 48%;
        }
    }
    &__description {
        background: $cardCol;
        padding: 15px 35px;
        box-sizing: border-box;
    }
    &__heading {
        height: 100%;
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        justify-content: center;   
    }
    &__title {
        @include title(left);
        @media screen and (max-width: 960px) {
            font-size: 18px;
        }
    }
    &__text {
        line-height: 25px;
        @media screen and (max-width: 960px) {
            font-size: 14px;
            line-height: 19px;
        }
        @media screen and (max-width: 768px){
            max-height: 40%;
            overflow: scroll;
        }
    }
    &__btn {
        @media screen and (max-width: 768px){
            font-size: 14px;
        }
    }

}
.btn {
    @include btn($secondaryCol, #fff, 20px , 20px ,$primaryCol);
}
.slick-arrow{
    position: absolute;
    top: 44%;
    z-index: 7;
    font-size: 0;
    width: 40px;
    height: 40px;
    background-color: transparent;
    border: 1px solid rgb(247, 55, 55);
    border-radius: 50%;
    transition: all .15s;
    outline: none;
    cursor: pointer;
    @media screen and (max-width: 1024px) {
        top: 43%;
    }
    @media screen and (max-width: 540px) {
        top: 103%;
    }
    &:hover{
        background: linear-gradient( 45deg, rgba(85, 184, 255, 0.692) 0%, rgba(126, 90, 255, 0.555) 100%)
    }
        &:after{
        content: '';
        display: block;
        width: 5px;
        height: 5px;
        position: absolute;
        top: 34px;
        transform: rotate(45deg);
        @media screen and (max-width: 1024px) {
        width: 4px;
        height: 4px;
        top: 19px;
        }
        
    }
    @media screen and (max-width: 1024px)  {
        width: 28px;
        height: 28px;
    }
}
.slick-prev {
left: -99px;
@media screen and (max-width: 540px) {
    left: -50px;
}
@media screen and (max-width: 280px) {
    left: -45px
}
&::after{
    border-left: 2px solid rgba(255, 255, 255, 0.562);
    border-bottom: 2px solid rgba(255, 255, 255, 0.562);
    right: 15px;
    top: 15px;
    @media screen and (max-width: 1024px) {
    left: 21px;
    }

    }
}
.slick-next{
    right:  -91px;
    @media screen and (max-width: 540px) {
        right: -40px;
    }
    @media screen and (max-width: 280px) {
        left: 160px
    }
    &::after{
        border-right: 2px solid rgb(255, 22, 22);
        border-top: 2px solid rgb(250, 5, 5);
        right: 15px;
        top: 15px;
        @media screen and (max-width: 1024px) {
        right: 10px;
        top: 10px;
        }
    }
}

